Fix task description alignment

--- a/src/components/Task.css
+++ b/src/components/Task.css
@@ -1,5 +1,5 @@
 .task {
-  align-items:;
+  align-items: center;
   border: none;
   display: flex;
   box-shadow: inset 0 -2px 1px rgba(0,0,0,0.03);
